Fix problems noti